--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section id="mainbox">
         <canvas class="myCanvas">
             <p>Add suitable fallback here.</p>
-          </canvas>
-        <aside>
+        </canvas>
+        <!-- <aside>
             <h2>Rules</h2>
             <p>During the Planning Phase, spend time by placing a Token…</p>
             <ul>
@@ -36,8 +36,14 @@
                 </li>
                 <li>On another Wizard, to have a scene with that Wizard in a location and context of his choice.</li>
             </ul>
-        </aside>
+        </aside> -->
     </section>
+    <!-- <form>
+        <fieldset id="controls">
+            <legend>Adjust the diameter of the rings</legend>
+            <input type="number" id="sunRingDiameterInput" name="sunRingDiameter" value="265">
+        </fieldset>
+    </form> -->
 </body>
 
 </html>
