--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Orrery</title>
-    <script src="../built/script.js" defer></script>
+    <script type="module" src="../built/main.js" defer></script>
 </head>
 
 <body>
